feat: let Orders internally merge orders with duplicate names